--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,12 @@
     "import/prefer-default-export": "off",
     "@typescript-eslint/naming-convention": "off",
     "@typescript-eslint/consistent-type-definitions": ["error", "type"],
+    "@typescript-eslint/no-misused-promises": [
+      "error",
+      {
+        "checksVoidReturn": false
+      }
+    ],
     "@typescript-eslint/no-unused-vars": [
       "warn",
       {
