--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,22 @@ services:
     build:
       context: .
       target: production
-
     environment:
       - NODE_ENV=production
-
+      - DATABASE_URL=postgresql://postgres:postgres@localhost:5432/postgres
     ports:
       - 3000:3000
+
+  db:
+    image: bitnami/postgresql:latest
+    ports:
+      - 5432:5432
+    volumes:
+      - postgres-data:/bitnami/postgresql
+    environment:
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_USER: postgres
+      POSTGRES_DB: postgres
+
+volumes:
+  postgres-data:
