--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
         condition: service_healthy
 
   db:
-    image: bitnami/postgresql:latest
+    image: bitnami/postgresql:16
     networks:
       - app-tier
     ports:
