--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,5 @@
 GEMINI_API_KEY=
+
+# Remember: Docker compose environment variables overwrites existing .env variables
+# Use localhost as host for `local` development and `db-container-name` for docker
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/postgres
