--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build": "tsc",
     "dev": "nodemon src/server.ts",
     "start": "node dist/src/server.js",
-    "start:migrate:seed": "prisma generate && prisma migrate deploy && prisma db seed && npm run start"
+    "prisma:generate": "prisma generate",
+    "start:migrate:seed": "prisma migrate deploy && prisma db seed && npm run start"
   },
   "keywords": [],
   "author": "",
